fix title align

--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -78,7 +78,7 @@ h5,
 h6 {
   font-weight: 300;
   line-height: 1em;
-  margin: 0 0 1em 0;
+  margin: 1em 0 1em 0;
 
   a {
     color: inherit;
