--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -22,7 +22,7 @@
 
 .hr {
   display: block;
-  width: 60px;
+  width: auto;
   height: 3px;
   background-color: darken($silver-color, 5%);
   margin: 3em auto;
